updated the design of the website

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     margin: 0 auto;
     padding: 20px;
     background-color: rgb(70, 146, 146);
+    border-radius: 5px;
 }
 h1{
     font-size: 36px;
