--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ header nav ul li {
     
     margin-left: 20px;
     font-style: oblique;
-    font-size: 10px;
+    font-weight: bold;
     
 
 }
